[package]
name = "sherpax-runtime"
version = "1.2.0"
authors = ['The ChainX Authors']
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive"] }
hex-literal = { version = "0.3.1", optional = true }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
smallvec = "1.7.0"
static_assertions = "1.1.0"

sp-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
sp-staking = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
sp-version = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }

frame-executive = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
frame-try-runtime = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false, optional = true }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false, optional = true }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false, optional = true }
# Used for the node template's RPCs
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }

pallet-aura = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
pallet-grandpa = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
pallet-session = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
pallet-sudo = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
pallet-utility = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
pallet-vesting = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }

# Governance
pallet-bounties = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.11" }
pallet-scheduler = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
pallet-tips = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }
pallet-treasury = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11", default-features = false }

# SherpaX
pallet-assets = { path = "../../xpallets/assets", default-features = false }
pallet-assets-bridge = { path = "../../xpallets/assets-bridge", default-features = false }

# Evm
pallet-evm = { git = "https://github.com/chainx-org/frontier", branch = "new-polkadot-v0.9.11", default-features = false }
pallet-ethereum = { git = "https://github.com/chainx-org/frontier", branch = "new-polkadot-v0.9.11", default-features = false }
pallet-ethereum-chain-id = { path = "../../xpallets/ethereum-chain-id", default-features = false }

# EVM precompile
fp-evm = { git = "https://github.com/chainx-org/frontier", default-features = false, branch = "new-polkadot-v0.9.11" }
pallet-evm-precompile-bn128 = { git = "https://github.com/chainx-org/frontier", default-features = false, branch = "new-polkadot-v0.9.11" }
pallet-evm-precompile-dispatch = { git = "https://github.com/chainx-org/frontier", default-features = false, branch = "new-polkadot-v0.9.11" }
pallet-evm-precompile-modexp = { git = "https://github.com/chainx-org/frontier", default-features = false, branch = "new-polkadot-v0.9.11" }
pallet-evm-precompile-simple = { git = "https://github.com/chainx-org/frontier", default-features = false, branch = "new-polkadot-v0.9.11" }
pallet-evm-precompile-sha3fips = { git = "https://github.com/chainx-org/frontier", default-features = false, branch = "new-polkadot-v0.9.11" }
pallet-evm-precompile-blake2 = { git = "https://github.com/chainx-org/frontier", default-features = false, branch = "new-polkadot-v0.9.11" }

# ETH API
fp-rpc = { git = "https://github.com/chainx-org/frontier", default-features = false, branch = "new-polkadot-v0.9.11" }
fp-self-contained = { git = "https://github.com/chainx-org/frontier", default-features = false, branch = "new-polkadot-v0.9.11" }

# Cross chain
sherpax-primitives = { path = "../../primitives", default-features = false }
xp-assets-registrar = { path = "../../primitives/assets-registrar", default-features = false }
xp-gateway-bitcoin = { path = "../../primitives/gateway/bitcoin", default-features = false }
xp-gateway-dogecoin = { path = "../../primitives/gateway/dogecoin", default-features = false }
xp-runtime = { path = "../../primitives/runtime", default-features = false }
xpallet-gateway-bitcoin = { path = "../../xpallets/gateway/bitcoin", default-features = false }
xpallet-gateway-bitcoin-rpc-runtime-api = { path = "../../xpallets/gateway/bitcoin/rpc/runtime-api", default-features = false }
xpallet-gateway-dogecoin = { path = "../../xpallets/gateway/dogecoin", default-features = false }
xpallet-gateway-dogecoin-rpc-runtime-api = { path = "../../xpallets/gateway/dogecoin/rpc/runtime-api", default-features = false }
xpallet-gateway-common = { path = "../../xpallets/gateway/common", default-features = false }
xpallet-gateway-common-rpc-runtime-api = { path = "../../xpallets/gateway/common/rpc/runtime-api", default-features = false }
xpallet-gateway-records = { path = "../../xpallets/gateway/records", default-features = false }
xpallet-gateway-records-rpc-runtime-api = { path = "../../xpallets/gateway/records/rpc/runtime-api", default-features = false }
xpallet-support = { path = "../../xpallets/support", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.11" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",

    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-staking/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "frame-try-runtime/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-aura/std",
    "pallet-authorship/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-multisig/std",
    "pallet-session/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-utility/std",
    "pallet-vesting/std",

    "pallet-bounties/std",
    "pallet-collective/std",
    "pallet-democracy/std",
    "pallet-elections-phragmen/std",
    "pallet-identity/std",
    "pallet-membership/std",
    "pallet-scheduler/std",
    "pallet-tips/std",
    "pallet-treasury/std",

    "pallet-assets/std",
    "pallet-assets-bridge/std",
    "pallet-collective/std",
    "pallet-elections-phragmen/std",
    "pallet-multisig/std",
    "pallet-evm/std",
    "pallet-ethereum/std",
    "pallet-ethereum-chain-id/std",
    "fp-evm/std",
    "fp-rpc/std",
    "fp-self-contained/std",

    "sherpax-primitives/std",
    "xp-assets-registrar/std",
    "xp-gateway-bitcoin/std",
    "xp-gateway-dogecoin/std",
    "xp-runtime/std",
    "xpallet-gateway-bitcoin/std",
    "xpallet-gateway-bitcoin-rpc-runtime-api/std",
    "xpallet-gateway-dogecoin/std",
    "xpallet-gateway-dogecoin-rpc-runtime-api/std",
    "xpallet-gateway-common/std",
    "xpallet-gateway-common-rpc-runtime-api/std",
    "xpallet-gateway-records/std",
    "xpallet-gateway-records-rpc-runtime-api/std",
    "xpallet-support/std",
]
runtime-benchmarks = [
    "hex-literal",
    "sp-runtime/runtime-benchmarks",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "pallet-ethereum/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "xpallet-gateway-bitcoin/runtime-benchmarks",
    "xpallet-gateway-dogecoin/runtime-benchmarks",
    "xpallet-gateway-common/runtime-benchmarks",
    "xpallet-gateway-records/runtime-benchmarks",
]

try-runtime = [
    "frame-executive/try-runtime",
    "frame-try-runtime",
    "frame-system/try-runtime",
    "xpallet-gateway-dogecoin/try-runtime",
    "xpallet-gateway-common/try-runtime"
]
