[package]
name = "sherpax-runtime"
version = "1.3.0"
authors = ['The ChainX Authors']
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
hex-literal = { version = "0.3.4", optional = true }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
smallvec = "1.8.0"
static_assertions = "1.1.0"

sp-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
sp-staking = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
sp-version = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }

frame-executive = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
frame-try-runtime = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false, optional = true }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false, optional = true }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }

pallet-aura = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
pallet-grandpa = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
pallet-session = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
pallet-sudo = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
pallet-utility = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
pallet-vesting = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }

# Governance
pallet-bounties = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
pallet-scheduler = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
pallet-tips = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }
pallet-treasury = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18", default-features = false }

# SherpaX
pallet-assets = { path = "../../xpallets/assets", default-features = false }
pallet-assets-bridge = { path = "../../xpallets/assets-bridge", default-features = false }

# Evm
pallet-evm = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18", default-features = false }
pallet-ethereum = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18", default-features = false }
pallet-base-fee = { git = "https://github.com/chainx-org/frontier", branch = "polkadot-v0.9.18", default-features = false }
pallet-ethereum-chain-id = { path = "../../xpallets/ethereum-chain-id", default-features = false }

# EVM precompile
fp-evm = { git = "https://github.com/chainx-org/frontier", default-features = false, branch = "polkadot-v0.9.18" }
pallet-evm-precompile-bn128 = { git = "https://github.com/chainx-org/frontier", default-features = false, branch = "polkadot-v0.9.18" }
pallet-evm-precompile-dispatch = { git = "https://github.com/chainx-org/frontier", default-features = false, branch = "polkadot-v0.9.18" }
pallet-evm-precompile-modexp = { git = "https://github.com/chainx-org/frontier", default-features = false, branch = "polkadot-v0.9.18" }
pallet-evm-precompile-simple = { git = "https://github.com/chainx-org/frontier", default-features = false, branch = "polkadot-v0.9.18" }
pallet-evm-precompile-sha3fips = { git = "https://github.com/chainx-org/frontier", default-features = false, branch = "polkadot-v0.9.18" }
pallet-evm-precompile-blake2 = { git = "https://github.com/chainx-org/frontier", default-features = false, branch = "polkadot-v0.9.18" }

# ETH API
fp-rpc = { git = "https://github.com/chainx-org/frontier", default-features = false, branch = "polkadot-v0.9.18" }
fp-self-contained = { git = "https://github.com/chainx-org/frontier", default-features = false, branch = "polkadot-v0.9.18" }

# Cross chain
sherpax-primitives = { path = "../../primitives", default-features = false }
xp-assets-registrar = { path = "../../primitives/assets-registrar", default-features = false }
xp-gateway-bitcoin = { path = "../../primitives/gateway/bitcoin", default-features = false }
xp-runtime = { path = "../../primitives/runtime", default-features = false }
xpallet-gateway-bitcoin = { path = "../../xpallets/gateway/bitcoin", default-features = false }
xpallet-gateway-bitcoin-rpc-runtime-api = { path = "../../xpallets/gateway/bitcoin/rpc/runtime-api", default-features = false }
xpallet-gateway-common = { path = "../../xpallets/gateway/common", default-features = false }
xpallet-gateway-common-rpc-runtime-api = { path = "../../xpallets/gateway/common/rpc/runtime-api", default-features = false }
xpallet-gateway-records = { path = "../../xpallets/gateway/records", default-features = false }
xpallet-gateway-records-rpc-runtime-api = { path = "../../xpallets/gateway/records/rpc/runtime-api", default-features = false }
xpallet-support = { path = "../../xpallets/support", default-features = false }

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.18" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",

    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-staking/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",

    "frame-executive/std",
    "frame-support/std",
    "frame-try-runtime/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-aura/std",
    "pallet-authorship/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-multisig/std",
    "pallet-session/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-utility/std",
    "pallet-vesting/std",

    "pallet-bounties/std",
    "pallet-collective/std",
    "pallet-democracy/std",
    "pallet-elections-phragmen/std",
    "pallet-identity/std",
    "pallet-membership/std",
    "pallet-scheduler/std",
    "pallet-tips/std",
    "pallet-treasury/std",

    "pallet-assets/std",
    "pallet-assets-bridge/std",
    "pallet-collective/std",
    "pallet-elections-phragmen/std",
    "pallet-multisig/std",
    "pallet-evm/std",
    "pallet-ethereum/std",
    "pallet-base-fee/std",
    "pallet-ethereum-chain-id/std",
    "fp-evm/std",
    "fp-rpc/std",
    "fp-self-contained/std",
    "sherpax-primitives/std",
    "xp-assets-registrar/std",
    "xp-gateway-bitcoin/std",
    "xp-runtime/std",
    "xpallet-gateway-bitcoin/std",
    "xpallet-gateway-bitcoin-rpc-runtime-api/std",
    "xpallet-gateway-common/std",
    "xpallet-gateway-common-rpc-runtime-api/std",
    "xpallet-gateway-records/std",
    "xpallet-gateway-records-rpc-runtime-api/std",
    "xpallet-support/std",
]
runtime-benchmarks = [
    "hex-literal",
    "sp-runtime/runtime-benchmarks",
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "pallet-ethereum/runtime-benchmarks",
    "pallet-evm/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "xpallet-gateway-bitcoin/runtime-benchmarks",
    "xpallet-gateway-common/runtime-benchmarks",
    "xpallet-gateway-records/runtime-benchmarks",
]
try-runtime = [
    "frame-executive/try-runtime",
    "frame-try-runtime",
    "frame-system/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-assets/try-runtime",
    "pallet-vesting/try-runtime",
    "pallet-authorship/try-runtime",
    "pallet-session/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-democracy/try-runtime",
    "pallet-collective/try-runtime",
    "pallet-elections-phragmen/try-runtime",
    "pallet-membership/try-runtime",
    "pallet-treasury/try-runtime",
    "pallet-scheduler/try-runtime",
    "pallet-identity/try-runtime",
    "pallet-bounties/try-runtime",
    "pallet-tips/try-runtime",
    "pallet-utility/try-runtime",
    "pallet-multisig/try-runtime",
    "pallet-ethereum/try-runtime",
    "pallet-assets-bridge/try-runtime",
    "xpallet-gateway-bitcoin/try-runtime",
    "xpallet-gateway-common/try-runtime",
    "xpallet-gateway-records/try-runtime"
]
